Added ScottLogic sponsor

--- a/src/data/src/sponsors.yaml
+++ b/src/data/src/sponsors.yaml
@@ -15,3 +15,7 @@
 - name: Purple Secure Systems
   logo: purplesecure.png
   url: https://purplesecure.com
+
+- name: Scott Logic
+  logo: scottlogic.png
+  url: http://www.scottlogic.com/
